--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "^5.10.15",
+    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +18,14 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "simple-react-validator": "^1.6.1",
     "sweetalert": "^2.1.2",
+    "usestate": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9"
   }
 }
